fix: image overlap header when scrolling on the small screen

--- a/src/app/static/css/album.css
+++ b/src/app/static/css/album.css
@@ -11,6 +11,7 @@ img{
     cursor: pointer;
     width: 300px;
     height: 300px;
+    z-index: -1;
 }
 
 .remove-photo{
